--- a/Css/diseño libros.css
+++ b/Css/diseño libros.css
@@ -1,9 +1,4 @@
-body {font-family: "Open Sans",  sans-serif;
-    font-size: 16px;
-    line-height: 20px;
-    background-color: beige;
-    }
-    header {
+   header {
     background-color: rgb(180, 144, 144);
     padding: 0.05em 0;
     margin-bottom: 0.5px;
@@ -35,7 +30,7 @@ body {font-family: "Open Sans",  sans-serif;
      background-color: #757575;
     }
     
-    /**color lila viejo por si lo necesito #beabb4**/
+
     
     nav ul {
         list-style: none;
@@ -153,33 +148,21 @@ section {
         padding: 3em 0;
         margin-top: 2em;
         text-align: center
+
     }
-/* .card {
-        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);;
-        transition: 0.3s;
-        width:30%;
-        display: inline-block
-      }
-    
-
-
-
-
-      main{
-        display: flex;
-        margin-top: 10%;
-        justify-content: space-around;
-      }
-     
-      p{
-        justify-content: center;
-      }
 
 
     
-.card {
-
-  padding-left: 30px;
+@media (min-width:320px) and ( max-width: 480px) {
+  body {
+      font-family: "Open Sans",  sans-serif;
+      font-size: 16px;
+      background-color: beige;
+  }
 }
-*/
 
+@media (min-width: 900px) {
+  body {
+      font-size: 24px;
+  }
+}
