--- a/Css/diseño.css
+++ b/Css/diseño.css
@@ -1,8 +1,9 @@
-body {font-family: "Open Sans",  sans-serif;
+/**body {font-family: "Open Sans",  sans-serif;
 font-size: 16px;
 line-height: 20px;
 background-color: beige;
-}
+}**/
+
 header {
 background-color: rgb(180, 144, 144);
 padding: 0.05em 0;
@@ -98,4 +99,50 @@ text-align: center
     padding: 10px;
     text-align: center;
   background-color: pink;
+}
+
+.columnas {
+    font-family: "Open Sans", sans-serif;
+    padding: 10px;
+    text-align: justify}
+
+
+form {
+
+        font-size: 25px;
+        font-family: "Open Sans",  sans-serif;
+        font-weight: 100;
+        color: black; 
+        padding-left: 300px;
+        margin-top: 20px;
+        margin: 70px;
+        padding-bottom: 40px;
+}
+    
+aside h1 {
+        font-family: "Open Sans",  sans-serif ;
+        font-size: 25px;
+        font-weight: 100;
+    
+    }
+
+.mensaje label
+    {
+    
+        padding-bottom: 2px;
+    }
+
+
+@media (min-width:320px) and ( max-width: 480px) {
+    body {
+        font-family: "Open Sans",  sans-serif;
+        font-size: 16px;
+        background-color: beige;
+    }
+}
+
+@media (min-width: 900px) {
+    body {
+        font-size: 24px;
+    }
 }
